--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         </h1>
 
         <ul>
-            <li class='color-secondary'><a href="#home"></a>Home</li>
-            <li class='color-secondary'><a href="#about"></a>Services</li>
-            <li class='color-secondary'><a href="#service"></a>About</li>
-            <li class='color-secondary'><a href="#contact"></a>Contact</li>
+            <li><a href="#home"></a>Home</li>
+            <li><a href="#about"></a>Services</li>
+            <li><a href="#service"></a>About</li>
+            <li><a href="#contact"></a>Contact</li>
         </ul>
     </nav>
 </body>
