--- a/index.html
+++ b/index.html
@@ -4,28 +4,86 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Eulix Energy | Modern Energy Solutions</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-
-
     <link rel="stylesheet" href="css/main.css">
+    <title>Eulix Energy | Modern energy services and solutions</title>
 </head>
 <body>
     <nav id='navbar'>
         <h1 class="logo">
             Eulix
             <span class="color-primary">
-                <i class="fas fa-burn"></i>
+                <i class="fas fa-flask"></i>
             </span>
             Energy
         </h1>
 
         <ul>
-            <li><a href="#home"></a>Home</li>
-            <li><a href="#about"></a>Services</li>
-            <li><a href="#service"></a>About</li>
-            <li><a href="#contact"></a>Contact</li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
+
+    <!-- showcase -->
+    <header id="showcase">
+        <div class="showcase-content">
+            <h1 class="l-heading">
+                Building A Better World
+            </h1>
+            <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae, fugit perspiciatis consectetur molestias inventore ipsam.
+            </p>
+            <a href="#" class="btn">About</a>
+        </div>
+    </header>
+
+    <!-- What we do -->
+    <section id="what" class="bg-light py-1">
+        <div class="container">
+            <h2 class="l-heading"><span class="color-primary">What</span>  we do</h2>
+        </div>
+        <div class="items">
+
+        
+            <div class="item">
+                <i class="fas fa-water fa-2x"></i>
+                <div>
+                    <h2>Hydro Electric</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, adipisci.</p>
+                </div>
+            </div>
+            <div class="item">
+                    <i class="fas fa-wind fa-2x"></i>
+                    <div>
+                        <h2>Wind</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, adipisci.</p>
+                    </div>
+                </div>
+            <div class="item">
+                    <i class="fas fa-solar-panel fa-2x"></i>
+                    <div>
+                        <h2>Solar</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, adipisci.</p>
+                    </div>
+                </div>
+        </div>
+    </section>
+
+    <section id="who">
+        <div class="who-img"></div>
+        <div class="who-text bg-dark">
+            <h2 class="m-heading"><span class="color-primary">Who</span> we are</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus ab minus nihil, quisquam officiis ad porro earum, enim a in odio commodi ea placeat soluta? Esse asperiores praesentium ex sin.</p>
+            <h3>Our Team</h3>
+            <ul class="team">
+                <li>CEO: Mark Ronstad</li>
+                <li>CFO: Rory Clader</li>
+                <li>Operations Exectutive: Adam Ross</li>
+                <li>Accounts: Jake Ross</li>
+                <li>Debts and Dirt: John Renhover</li>
+            </ul>
+        </div>
+    </section>
 </body>
 </html>
